--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,12 @@
   box-shadow: 7px 8px 14px -6px rgba(0, 0, 0, 0.64);
 }
 .gradient-diagonal {
+  background: -webkit-linear-gradient(45deg, #ffffff 0%, #f1f1f1 50%, #f6f6f6 100%);
   background: -moz-linear-gradient(45deg, #ffffff 0%, #f1f1f1 50%, #f6f6f6 100%);
   background: linear-gradient(45deg, #ffffff 0%, #f1f1f1 50%, #f6f6f6 100%);
 }
 .gradient {
+  background: -webkit-linear-gradient(top, #ffffff 0%, #f3f3f3 50%, #ededed 51%, #ffffff 100%);
   background: -moz-linear-gradient(top, #ffffff 0%, #f3f3f3 50%, #ededed 51%, #ffffff 100%);
   background: linear-gradient(to bottom, #ffffff 0%, #f3f3f3 50%, #ededed 51%, #ffffff 100%);
 }
@@ -75,7 +77,7 @@ header {
   -moz-box-align: center;
   align-items: center;
   overflow: hidden;
-  background: url(../img/photo5.jpg) no-repeat;
+  background: url(../img/honey2.jpg) no-repeat;
   background-position: center;
   -ms-background-size: cover;
   background-size: cover;
@@ -263,6 +265,9 @@ header {
   font-size: 1.2rem;
   font-weight: 800;
   position: relative;
+  -webkit-transition: all 0.8s ease-in-out;
+  -moz-transition: all 0.8s ease-in-out;
+  transition: all 0.8s ease-in-out;
 }
 @media screen and (max-width: 720px) {
   .main-link {
@@ -304,6 +309,7 @@ header {
   -moz-transform: translateY(0%);
   -ms-transform: translateY(0%);
   transform: translateY(0%);
+  -webkit-transition-delay: 0s, 0s, 0.3s;
   -moz-transition-delay: 0s, 0s, 0.3s;
   transition-delay: 0s, 0s, 0.3s;
 }
@@ -322,6 +328,7 @@ header {
   z-index: 2;
   visibility: hidden;
   position: absolute;
+  -webkit-transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
   -moz-transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
   transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
 }
@@ -338,8 +345,8 @@ header {
 }
 /*-----------Social-icons-hexagon--------------------*/
 .hexagon-wrapper {
-  width: 75px;
-  height: 75px;
+  width: 65px;
+  height: 65px;
   text-align: center;
   margin: 20px;
   position: relative;
@@ -368,6 +375,7 @@ header {
   display: inline-block;
   cursor: pointer;
   box-shadow: inset 0 0 0 0 #e29e19;
+  -webkit-transition: all ease 0.8s;
   -moz-transition: all ease 0.8s;
   transition: all ease 0.8s;
 }
@@ -405,7 +413,7 @@ header {
 .hexagon-wrapper .fa-odnoklassniki {
   position: absolute;
   z-index: 2;
-  font-size: 3rem;
+  font-size: 2rem;
   color: #fff;
   -webkit-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.64);
   -moz-text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.64);
@@ -419,16 +427,16 @@ header {
   }
 }
 .fa-vk {
-  top: 16%;
-  left: 14%;
+  top: 25%;
+  left: 20%;
 }
 .fa-facebook {
-  top: 21%;
-  left: 33%;
+  top: 28%;
+  left: 36%;
 }
 .fa-odnoklassniki {
-  top: 16%;
-  left: 28%;
+  top: 23%;
+  left: 34%;
 }
 /*-----------HEADER PROMO----------*/
 .promo {
@@ -481,6 +489,7 @@ header {
   border: 2px solid #b47e14;
   box-shadow: inset 0 100px 0 0 #e29e19;
   color: #FFF;
+  -webkit-transition: all ease 0.8s;
   -moz-transition: all ease 0.8s;
   transition: all ease 0.8s;
 }
@@ -502,7 +511,6 @@ header {
   -moz-box-align: center;
   align-items: center;
   color: rgba(97, 97, 97, 0.39);
-  background: liner-gradient(to bottom, rgba(97, 97, 97, 0.39), #e29e19);
 }
 @media screen and (max-width: 760px) {
   #aboutus {
@@ -556,7 +564,8 @@ header {
   text-align: center;
   margin-bottom: 1.5rem;
 }
-.avatar img {
+.avatar img,
+.distributer-card img {
   border-radius: 50%;
   width: 6.25rem;
   height: 6.25rem;
@@ -664,6 +673,7 @@ header {
   -moz-box-align: center;
   align-items: center;
   padding: 1rem 0.5rem;
+  background: -webkit-linear-gradient(top, #ffffff 0%, #f3f3f3 50%, #ededed 51%, #ffffff 100%);
   background: -moz-linear-gradient(top, #ffffff 0%, #f3f3f3 50%, #ededed 51%, #ffffff 100%);
   background: linear-gradient(to bottom, #ffffff 0%, #f3f3f3 50%, #ededed 51%, #ffffff 100%);
 }
@@ -727,6 +737,7 @@ header {
   background: url(../img/wood.jpg) no-repeat;
   background-position: center;
   background-size: cover;
+  position: relative;
 }
 .wrap-doc-info {
   -webkit-box-flex: 1;
@@ -748,16 +759,17 @@ header {
 }
 .doc-wrap {
   -webkit-box-flex: 1;
-  -ms-flex: 1 2 60%;
-  -webkit-flex: 1 2 60%;
+  -ms-flex: 1 2 100%;
+  -webkit-flex: 1 2 100%;
   -moz-box-flex: 1;
-  flex: 1 2 60%;
+  flex: 1 2 100%;
   margin: 0.9rem 2rem;
   height: auto;
   background-color: rgba(0, 0, 0, 0.54);
   border-radius: 5px;
   box-shadow: 7px 8px 14px -6px rgba(0, 0, 0, 0.64);
   position: absolute;
+  top: 18%;
 }
 .attestate,
 .sertificate,
@@ -767,19 +779,28 @@ header {
   height: auto;
   padding: 1rem;
 }
+.attestate img,
+.sertificate img,
+.reward img {
+  width: 100%;
+  height: 100%;
+}
 .name-document {
   font-size: 1.75rem;
   line-height: 1.5rem;
   font-family: 'Open Sans', sans-serif;
   padding: 0.6rem 1.2rem;
-  padding-bottom: 0.7rem;
   border-radius: 0.3rem;
   cursor: pointer;
   color: #263947;
   background: #FFF;
   border: 2px solid #263947;
   letter-spacing: 1px;
+  text-transform: uppercase;
+  display: inline-block;
+  text-align: center;
   box-shadow: inset 0 0 0 0 #263947;
+  -webkit-transition: all ease 0.8s;
   -moz-transition: all ease 0.8s;
   transition: all ease 0.8s;
 }
@@ -1088,6 +1109,11 @@ footer i {
     -moz-box-ordinal-group: 0;
     -ms-flex-order: -1;
     order: -1;
+  }
+  .doc-wrap {
+    top: 13px;
+    right: -14px;
+    width: 93%;
   }
 }
 @media screen and (min-width: 320px) and (max-width: 600px) {
