--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -1,22 +1,183 @@
+
+// mixin for media query
+.screen(@min, @max, @ruleset) {
+  @media (min-width: @min) and (max-width: (@max - 1)) {
+    @ruleset();
+  }
+}
+
+
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&subset=cyrillic');
+
+
 * {
     box-sizing: border-box;
 }
 body {
+    background-color: hsl(100, 40%, 50%);
     font-size: 16px;
-    background-color: tomato;
+    line-height: 1.5;
+    font-family:  'Source Sans Pro', sans-serif;
+    transition: all 5s ease-out;
 
 }
-// .site-wrapper {
-//     margin: 0 auto;
-//     padding: 1% 3%;
-//     max-width: 60em;
-//     display: grid;
-//     grid-template-rows: 100px 1fr;
+.site-wrapper {
+    margin: 0 auto;
+    padding: 1% 3%;
+    max-width: 70em;
 
-//     @media screen and (min-width: 769px){
-//             grid-template-columns: 2fr 1fr;
-//         }
-// }
+    .screen(1024px, 2220px, {
+        padding: 1%;
+    });
+}
+//  -------------------MENU-------------------------
+.menu__list {
+    list-style: none;
+
+    .screen(320px, 768px, {
+            display: none;
+        });
+
+    .screen(768px, 2220px, {
+            display: block;
+            display: flex;
+            justify-content: space-around;
+        });
+}
+.menu__link{
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.5;
+    color: rgb(34, 44, 66);
+    position: relative;
+    transition: all .2s cubic-bezier(0.54, -0.13, 0.52, 0.64);
+
+    &:hover {
+        border-bottom: 3px solid rgb(34, 44, 66);
+    }        
+    &:active { 
+        color: #ccb1f1;
+    }
+
+}
+
+.menu__list-mobile {
+    visibility: hidden;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.34);
+    top: 3rem;
+    left: 5%;
+    width: 90vw;
+    padding: 25px 15px;
+    transition: left .3s;
+    animation-duration: 3s;
+    animation-name: slidein;
+    list-style: none;
+    box-shadow: 0 0 10px 4px rgba(0,0,0,0.2);
+}
+
+.menu__item-mobile {
+    padding:0 3rem;
+
+}
+.menu__mobile-logo {
+
+    .screen(320px, 768px, {
+            display: block;
+        });
+
+    .screen(768px, 2220px, {
+            display: none;
+        });
+}
+
+.show-menu {
+    visibility: visible;
+    left: 5%;
+    z-index: 2;
+}
+
+.burger-img {
+    width: 70px;
+    height: 70px;
+    display: block;
+    background: url('../img/burger.svg') no-repeat center;
+    background-size: cover;
+    cursor: pointer;
+    position: relative;
+    margin: 0 auto;
+    background-color: transparent;
+    border-radius: 50%;
+    box-shadow: 0 0 10px 4px rgba(0,0,0,0.2);
+
+}
+.animation-on {
+   animation: burger-rotate .4s; 
+}
+
+@keyframes burger-rotate {
+    0% {
+        transform: rotateX(-180deg);
+    }
+    100% {
+        transform: translateY(90deg);
+    }
+}
 
 
+// ------------------WORKS SECTION---------------------
+.works-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-direction: column;
+    margin-top: 8rem;
 
+    .screen(640px, 2220px, {
+           flex-direction: row;
+        });
+    .screen(768px, 2220px, {
+        margin-top: 0.5rem;
+    });
+
+}
+
+.works-list__item {
+    width: calc(90% - 0.7rem);
+    margin: 3rem 1rem 6rem 1rem;
+    background-color: transparent;
+    padding: 0.5rem ;
+    list-style: none;
+    position: relative;
+    box-shadow: 0 0 10px 4px rgba(0,0,0,0.2);
+    transition: all 0.2s;
+    flex: 1 1 auto;
+
+     .screen(640px, 1024px, {
+           width: calc(40% - 0.7rem);
+        });
+
+    .screen(1024px, 2220px, {
+        width: calc(30% - 0.7rem);
+    });
+}
+.work-list__link {
+    text-decoration: none;
+    color: #000;
+    padding: 1rem 2rem 1rem 0;
+
+}
+.works-screen {
+    object-fit: cover;
+    width: calc(100% + 0.5rem);
+    height: 100%;
+}
+.work-list__title{
+    font-size: 1.8rem;
+    line-height: 1.5;
+    font-weight: 400;
+    text-align: center;
+    height: 10%;
+
+}
