--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -154,12 +154,16 @@ body {
     transition: all 0.2s;
     flex: 1 1 auto;
 
+    &:last-child {
+        margin: auto;
+    }
+
      .screen(640px, 1024px, {
-           width: calc(40% - 0.7rem);
+           width: calc(45% - 0.7rem);
         });
 
     .screen(1024px, 2220px, {
-        width: calc(30% - 0.7rem);
+        width: calc(40% - 0.7rem);
     });
 }
 .work-list__link {
